--- a/.github/workflows/test_scraper.yml
+++ b/.github/workflows/test_scraper.yml
@@ -2,12 +2,12 @@ name: Test Scraper
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - master
-  # pull_request:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   test_scraper:
